--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+server.port=8090
+server.servlet.context-path=/app
 
+value.name= isaias
+value.apellido= gomez
+
+user.email=isaiasrobles2003@gmail.com
+user.password=1234
+user.age= 19
+
+logging.level.root=info
+logging.level.org.springframework.web=warn
+logging.level.org.hibernate=error
+
+#spring.jpa.show-sql=true
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=SA
+#spring.datasource.password=
+#spring.jpa.database-plathform=org.hibernate.dialect.H2Dialect
